# adaptive-thermal-pinn-digital-twin

./: .gitignore  Analytical measurements.ipynb  README.md  heat2d_dirichlet.py  pyproject.toml  requirements.txt
DeepXDE/: README.md
DeepXDE/DeepXDE_adaptive_Final/: README.md  run.py  run_constant_flux.py
DeepXDE/paper_data_model/: README.md  online_heat_pinn.py  requirements.txt
DeepXDE/validated_adaptive_workflow/: README.md  combined_latency_figures.py  literature_validation.py  parameters.py  pinn_workflow.py  plots.py  reference_data.py  run_workflow.py  switch_solver.py
DeepXDE_1D/: README.md  online_heat_pinn.py
DeepXDE_1D/results/: baseline_vs_adaptive_center.csv  literature_pinn_metrics.json  literature_vs_pinn.csv
DeepXDE_comparison_to_pytorch_model/: README.md
Literature_results/: README.md  literature_results_section.tex  mdpi_416_series.py
Validated_Adaptive_PINN/: README.md  analytical_solution.py  combined_latency_figures.py  latency_study.py  parameters.py  pinn_workflow.py  plots.py  requirements.txt  switch_solver.py
analytical_measurements_output/: absolute_error_t1p2.csv  adi_temperature_t1p2.csv  analytical_temperature_t1p2.csv  center_temperature_history.csv  published_comparison.csv  spatial_convergence.csv  time_step_convergence.csv
notes/: analytical_validation.md  analytical_validation.py  baseline_error_findings.md
paper_result/: README.md
reports/: preliminary_progress_report.md
scripts/: make_visual_graphs.py  run_deepxde_experiment.py  run_experiment.py  run_progress_study.py
tests/: test_pipeline.py
(+115 files in other folders)
