[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-pinn-digital-twin"
version = "0.1.0"
description = "Adaptive PINN digital twin for 1D rocket throat-wall heat conduction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "torch>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
deepxde = ["deepxde>=1.15.0"]

[tool.setuptools.packages.find]
where = ["src"]
